// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddMeeting page can add meeting to store 1`] = `
<div class="add-meeting add-meeting--loading">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" class="add-meeting__input">
          <option value="" selected="selected"></option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" type="date" min="2020-04-06" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`AddMeeting page can add meeting to store 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,27 +1,23 @@
- <div class=\\"add-meeting add-meeting--loading\\">
+ <div class=\\"add-meeting\\">
    <div class=\\"add-meeting__container\\">
      <h1>Add meeting</h1>
      <div class=\\"add-meeting__wrapper\\">
        <div class=\\"add-meeting__field\\"><label for=\\"email\\">
            Choose person to meet
-         </label> <select id=\\"email\\" class=\\"add-meeting__input\\">
-           <option value=\\"\\" selected=\\"selected\\"></option>
-         </select></div>
+         </label> <input id=\\"email\\" type=\\"text\\" placeholder=\\"Email address\\" class=\\"add-meeting__input\\"></div>
        <div class=\\"checkbox add-meeting__field\\"><label for=\\"predefined\\">
            Predefined?
          </label> <input id=\\"predefined\\" type=\\"checkbox\\"></div>
      </div>
      <div class=\\"add-meeting__wrapper\\"><label for=\\"meetingDate\\">
          Meeting date
        </label> <input id=\\"meetingDate\\" type=\\"date\\" min=\\"2020-04-06\\" class=\\"add-meeting__input\\"></div>
-     <div class=\\"add-meeting__action-wrapper\\"><button disabled=\\"disabled\\" class=\\"add-meeting__button\\">
+     <div class=\\"add-meeting__action-wrapper\\"><button class=\\"add-meeting__button\\">
          Save meeting
        </button>
-       <p class=\\"add-meeting__error\\">
-         You've got a problem in form
-       </p>
+       <!---->
      </div>
    </div>
    <div class=\\"message\\" style=\\"display: none;\\">
      <h2>
"
`;

exports[`AddMeeting page can add meeting to store 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -10,17 +10,19 @@
          </label> <input id=\\"predefined\\" type=\\"checkbox\\"></div>
      </div>
      <div class=\\"add-meeting__wrapper\\"><label for=\\"meetingDate\\">
          Meeting date
        </label> <input id=\\"meetingDate\\" type=\\"date\\" min=\\"2020-04-06\\" class=\\"add-meeting__input\\"></div>
-     <div class=\\"add-meeting__action-wrapper\\"><button class=\\"add-meeting__button\\">
+     <div class=\\"add-meeting__action-wrapper\\"><button class=\\"add-meeting__button\\" disabled=\\"disabled\\">
          Save meeting
        </button>
-       <!---->
+       <p class=\\"add-meeting__error\\">
+         You've got a problem in form
+       </p>
      </div>
    </div>
-   <div class=\\"message\\" style=\\"display: none;\\">
+   <div class=\\"message message--success\\" style=\\"\\">
      <h2>
-
+       Successfully added a new meeting
      </h2>
    </div>
  </div>"
`;

exports[`AddMeeting page default form is rendered 1`] = `
<div class="add-meeting add-meeting--loading">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" class="add-meeting__input">
          <option value="" selected="selected"></option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" type="date" min="2020-04-06" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`AddMeeting page has loading class when form is blocked 1`] = `
<div class="add-meeting add-meeting--loading">
  <div class="add-meeting__container">
    <h1>Add meeting</h1>
    <div class="add-meeting__wrapper">
      <div class="add-meeting__field"><label for="email">
          Choose person to meet
        </label> <select id="email" class="add-meeting__input">
          <option value="" selected="selected"></option>
        </select></div>
      <div class="checkbox add-meeting__field"><label for="predefined">
          Predefined?
        </label> <input id="predefined" type="checkbox"></div>
    </div>
    <div class="add-meeting__wrapper"><label for="meetingDate">
        Meeting date
      </label> <input id="meetingDate" type="date" min="2020-04-06" class="add-meeting__input"></div>
    <div class="add-meeting__action-wrapper"><button disabled="disabled" class="add-meeting__button">
        Save meeting
      </button>
      <p class="add-meeting__error">
        You've got a problem in form
      </p>
    </div>
  </div>
  <div class="message" style="display: none;">
    <h2>

    </h2>
  </div>
</div>
`;

exports[`AddMeeting page has loading class when form is blocked 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,13 +1,22 @@
- <div class=\\"add-meeting add-meeting--loading\\">
+ <div class=\\"add-meeting\\">
    <div class=\\"add-meeting__container\\">
      <h1>Add meeting</h1>
      <div class=\\"add-meeting__wrapper\\">
        <div class=\\"add-meeting__field\\"><label for=\\"email\\">
            Choose person to meet
          </label> <select id=\\"email\\" class=\\"add-meeting__input\\">
            <option value=\\"\\" selected=\\"selected\\"></option>
+           <option>
+             test
+           </option>
+           <option>
+             Example Person1
+           </option>
+           <option>
+             Example Person2
+           </option>
          </select></div>
        <div class=\\"checkbox add-meeting__field\\"><label for=\\"predefined\\">
            Predefined?
          </label> <input id=\\"predefined\\" type=\\"checkbox\\"></div>
      </div>"
`;
